Update Jacoco and PiTest versions for Java 21 compatibility