@@ -25,7 +25,7 @@
     <webjars-font-awesome.version>4.7.0</webjars-font-awesome.version>
 
     <checkstyle.version>12.1.2</checkstyle.version>
-    <jacoco.version>0.8.14</jacoco.version>
+    <jacoco.version>0.8.12</jacoco.version>
     <libsass.version>0.3.4</libsass.version>
     <lifecycle-mapping>1.0.0</lifecycle-mapping>
     <maven-checkstyle.version>3.6.0</maven-checkstyle.version>
@@ -296,17 +296,18 @@
       <plugin>
         <groupId>org.pitest</groupId>
         <artifactId>pitest-maven</artifactId>
-        <version>1.17.1</version>
+        <version>1.18.0</version>
         <dependencies>
           <dependency>
             <groupId>org.pitest</groupId>
             <artifactId>pitest-junit5-plugin</artifactId>
-            <version>1.2.1</version>
+            <version>1.2.2</version>
           </dependency>
         </dependencies>
         <configuration>
           <targetClasses>
-            <param>org.springframework.samples.petclinic.*</param>
+            <param>org.springframework.samples.petclinic.model.*</param>
+            <param>org.springframework.samples.petclinic.owner.Owner</param>
           </targetClasses>
           <targetTests>
             <param>org.springframework.samples.petclinic.*</param>
@@ -325,6 +326,14 @@
             <outputFormat>XML</outputFormat>
           </outputFormats>
           <timestampedReports>false</timestampedReports>
+          <threads>2</threads>
+          <timeoutConstant>20000</timeoutConstant>
+          <jvmArgs>
+            <value>-Xmx1024m</value>
+            <value>-Xms512m</value>
+            <value>--add-opens=java.base/java.lang=ALL-UNNAMED</value>
+            <value>--add-opens=java.base/java.util=ALL-UNNAMED</value>
+          </jvmArgs>
         </configuration>
       </plugin>
 
